nothing important just for view and some simole code for csharp

--- a/Azmoonak/Views/Account/Register.cshtml
+++ b/Azmoonak/Views/Account/Register.cshtml
@@ -8,43 +8,43 @@
 <form asp-controller="account" asp-action="register">
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
         <div class="row border rounder-5 p-3 bg-white shadow box-area">
-            <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #0568fd">
+            <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #fca402">
                 <div class="featured-image mb-3">
                     <img style="width: 250px;" src="~/Image/LoginRegister/Register.png" class="img-fluid">
                 </div>
-                <p class="text-white fs-2" style="font-weight: 600;">Sign Up</p>
-                <small class="text-white text-wrap text-center" style="width: 17rem;">باید یه متن جدید اضافه کنم</small>
+                <p class=" fs-2" style="font-weight: 600;color:#151515;">آزمونک</p>
+                <small class=" text-wrap text-center" style="width: 17rem;color:#151515;">اطلاعات خود را کامل کنید</small>
             </div>
 
             <div class="col-md-6 right-box">
                 <div class="row align-items-center">
                     <div class="header-text mb-4 text-center">
-                        <h2>Register Page</h2>
+                        <h2>ساخت حساب کاربری</h2>
                     </div>
                     <div class="input-group mb-3">
-                        <input asp-for="FName" class="form-control form-control-lg bg-light fs6" placeholder="First Name">
+                        <input asp-for="FName" class="form-control form-control-lg bg-light fs6" placeholder="نام">
                     </div>
                     <div class="input-group mb-3">
-                        <input asp-for="LName" class="form-control form-control-lg bg-light fs6" placeholder="Last Name">
+                        <input asp-for="LName" class="form-control form-control-lg bg-light fs6" placeholder="نام خانوادگی">
                     </div>
                     <div class="input-group mb-3">
-                        <input asp-for="Mobile" class="form-control form-control-lg bg-light fs6" placeholder="Phone Number">
+                        <input asp-for="Mobile" class="form-control form-control-lg bg-light fs6" placeholder="شماره تلفن">
                     </div>
                     <span asp-validation-for="Mobile" class="text-warning"></span> <!--Error-->
                     <div class="input-group mb-3">
-                        <input asp-for="Password" class="form-control form-control-lg bg-light fs6" placeholder="Your Password">
+                        <input asp-for="Password" class="form-control form-control-lg bg-light fs6" placeholder="کلمه عبور">
                     </div>
                     <span asp-validation-for="Password" class="text-warning"></span>
                     <div class="input-group mb-1">
-                        <input asp-for="RePassword" class="form-control form-control-lg bg-light fs6" placeholder="RePassword">
+                        <input asp-for="RePassword" class="form-control form-control-lg bg-light fs6" placeholder="تکرار کلمه عبور">
                     </div>
                     <span asp-validation-for="RePassword" class="text-warning"></span>
 
                     <div class="inpute-group mb-3 mt-3">
-                        <button type="submit" class="btn btn-lg btn-primary w-100 fs-6">Sign Up</button>
+                        <button type="submit" class="btn btn-lg btn-primary w-100 fs-6" style="background-color:#fca402;border:2px solid #151515;color:#151515;">عضویت در سایت</button>
                     </div>
                     <div class="row">
-                        <small>Do you have account? <a asp-action="Login">Login</a></small>
+                        <small>قبلا ثبت نام کرده اید ؟ <a asp-action="Login">ورود به حساب</a></small>
                     </div>
                 </div>
             </div>
