--- a/Azmoonak/Views/Exam/Details.cshtml
+++ b/Azmoonak/Views/Exam/Details.cshtml
@@ -7,8 +7,9 @@
     <hr />
     <h6 style="color:red;">توجه!</h6>
     <h6>1) سوالات هیچ گونه نمره منفی نداشته پس به تمام سوالات پاسخ دهید</h6>
-    <h6>2) بعد از اتمام امتحان , پاسخ نامه به شما نمایش داده می شود</h6>
-    <h6>3) لطفا برای اطمینان از عملکرد و تجربه بهتر از مرورگرهای مدرن و به روز مانند <span class="fa fa-chrome"></span> کروم یا <span class="fa fa-firefox"></span> فایرفاکس استفاده کنید.</h6>
+    <h6>2) هر سوال دارای 2.5 نمره میباشد</h6>
+    <h6>3) بعد از اتمام امتحان , پاسخ نامه به شما نمایش داده می شود</h6>
+    <h6>4) لطفا برای اطمینان از عملکرد و تجربه بهتر از مرورگرهای مدرن و به روز مانند <span class="fa fa-chrome"></span> کروم یا <span class="fa fa-firefox"></span> فایرفاکس استفاده کنید.</h6>
     <hr />
     <h4 class="text-danger text-center">آیا آزمون را شروع میکنید؟</h4>
     <form asp-area="" asp-controller="exam" asp-action="startexam" asp-route-id="@Model.Group.Id" class="text-center">
