--- a/Azmoonak/Views/Shared/Header.cshtml
+++ b/Azmoonak/Views/Shared/Header.cshtml
@@ -54,6 +54,7 @@
 
 
             <div class="col-5 d-flex justify-content-end align-items-center h-100 rounded-start-4">
+
                 <a class="text-decoration-none text-white" asp-area="" asp-controller="exam" asp-action="ShowDemoExamGroups">دمو امتحان</a>
 
                 <div class="d-flex flex-column align-items-center gap-2">
@@ -66,7 +67,8 @@
                         }
                         else
                         {
-                            <a asp-area="" asp-controller="account" asp-action="login" style="cursor: pointer; color:white;" title="ورود به پنل کاربری" class="fa fa-user-times fa-lg text-decoration-none text-black"></a>
+                            <a asp-area="" asp-controller="account" asp-action="login" style="cursor: pointer; color:white;" title="ورود به پنل کاربری" class="fa fa-user fa-lg text-decoration-none text-black"></a>
+                            <h6 class="text-black">حساب کاربری</h6>
                         }
                     }
 
