--- a/Azmoonak/wwwroot/Css/MainStyle.css
+++ b/Azmoonak/wwwroot/Css/MainStyle.css
@@ -14,6 +14,8 @@ body {
 @font-face {
     font-family: 'vazir-bold';
     src: url('../fonts/vazir-bold.ttf') format('truetype');
+    src: url('../fonts/vazir-bold.ttf') format('truetype');
+    src: url('../fonts/vazir-bold.ttf') format('truetype');
 }
 
 
